# ros2-kortex-pick-and-place-with-moveit-task-constructor

./: LICENSE  README.md  docker-compose.yaml  dockerfile
kinova_gen3_6dof_robotiq_2f_85_description/: CMakeLists.txt  package.xml
kinova_gen3_6dof_robotiq_2f_85_description/launch/: view_robot_launch.py
kinova_gen3_6dof_robotiq_2f_85_description/urdf/: gen3_macro.xacro  kinova.urdf.xacro  kortex.ros2_control.xacro  kortex_robot.xacro  robotiq_2f_85_macro.xacro
kinova_gen3_6dof_robotiq_2f_85_description_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
kinova_gen3_6dof_robotiq_2f_85_description_moveit_config/config/: initial_positions.yaml  kinova_arm.ros2_control.xacro  kinova_arm.srdf  kinova_arm.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
kinova_gen3_6dof_robotiq_2f_85_description_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
mtc_kinova_demo/: CMakeLists.txt  package.xml
mtc_kinova_demo/launch/: minimal_mtc_tutorial_launch.py  mtc.rviz  mtc_demo_launch.py  pick_and_place_mtc_tutorial_launch.py  pick_plance_demo_launch.py
mtc_kinova_demo/src/: minimal_mtc_tutorial.cpp  pick_and_place_mtc_tutorial.cpp
