<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kinova_gen3_6dof_robotiq_2f_85_description</name>
  <version>0.1.0</version>
  <description>
    <p>Description package for kinova_gen3_6dof_robotiq_2f_85_description</p>
  </description>
  <maintainer email="patrick.wspanialy@ecoation.com">Patrick Wspanialy</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>robotiq_description</exec_depend>
  <exec_depend>picknik_reset_fault_controller</exec_depend>
  <exec_depend>picknik_twist_controller</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>